<resources>
    <string name="app_name">DemoChat</string>

    <!-- SnackBar-->
    <string name="snackbar_error_title">Error</string>

    <!-- Nav Bottom-->
    <string name="tab1">Tab1</string>
    <string name="tab2">Tab2</string>
    <string name="tab3">Tab3</string>
    <string name="tab4">Tab4</string>
    <color name="text_color_hint">#999999</color>

    <!-- Login -->
    <string name="tvRegister">Register</string>
    <string name="tvUserName">User Name</string>
    <string name="tvPassword">Password</string>
    <string name="tvConfirmPassword">Confirm Password</string>
    <string name="tvGender">Gender</string>
    <string name="tvMail">Email</string>
    <string name="tvPhone">Phone</string>
    <string name="tvLogin">LOGIN</string>
    <string name="male">Male</string>
    <string name="female">FeMale</string>
    <string name="error_invalid_email">The mail is incorrect.</string>
    <string name="error_email_exit">Email already exists</string>
    <string name="error_pass_not_match">Confirmation password does not match password.</string>
    <string name="error_password_invalid">Please enter at least 8 characters for the password without a space.</string>
    <string name="error_user_name_invalid">User Name not empty</string>
    <string name="error_mail_pass_incorrect">Maid Pass incorrect</string>

    <!-- ListUser-->
    <string name="btn_chat_text">Chat</string>

    <!-- Chat-->
    <string name="chat_hint">Add message</string>

    <!-- Drawer menu-->
    <string name="menu_profile">About</string>
    <string name="menu_logout">Logout</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="search_hint">search text</string>
</resources>
