<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintBottom_toBottomOf="parent"
    android:layout_height="wrap_content">

    <RadioGroup
        android:id="@+id/rgNavMain"
        android:layout_width="match_parent"
        android:layout_height="@dimen/nav_bottom_height"
        android:background="@color/white"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioButton
            android:id="@+id/rbTop"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:checked="true"
            android:drawableTop="@drawable/ic_nav_friend"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/tab1"
            android:textColor="@color/text_color_hint"
            android:textSize="@dimen/text_size_small" />

        <RadioButton
            android:id="@+id/rbFriend"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/ic_nav_friend"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/tab2"
            android:textColor="@color/text_color_hint"
            android:textSize="@dimen/text_size_small" />

        <RadioButton
            android:id="@+id/rbChatList"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/ic_nav_friend"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/tab3"
            android:textColor="@color/text_color_hint"
            android:textSize="@dimen/text_size_small" />

        <RadioButton
            android:id="@+id/rbMyPage"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:button="@null"
            android:drawableTop="@drawable/ic_nav_friend"
            android:gravity="center"
            android:padding="2dp"
            android:text="@string/tab4"
            android:textColor="@color/text_color_hint"
            android:textSize="@dimen/text_size_small" />
    </RadioGroup>
</android.support.constraint.ConstraintLayout>